WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285745
REGRESSION(
288686@main
): [GStreamer] Critical warning when running fast/mediastream/mediastreamtrack-video-clone.html
https://bugs.webkit.org/show_bug.cgi?id=285745
Summary
REGRESSION(288686@main): [GStreamer] Critical warning when running fast/media...
Philippe Normand
Reported
2025-01-10 07:28:43 PST
Thread 1 (Thread 0x7f53867fc6c0 (LWP 150745)): #0 g_logv (log_domain=0x7f56bd7dca72 "GStreamer-Video", log_level=G_LOG_LEVEL_CRITICAL, format=<optimized out>, args=args@entry=0x7f53867faa50) at ../glib/gmessages.c:1422 #1 0x00007f56c12af7a3 in g_log (log_domain=log_domain@entry=0x7f56bd7dca72 "GStreamer-Video", log_level=log_level@entry=G_LOG_LEVEL_CRITICAL, format=format@entry=0x7f56c1307f92 "%s: assertion '%s' failed") at ../glib/gmessages.c:1460 #2 0x00007f56c12b261d in g_return_if_fail_warning (log_domain=log_domain@entry=0x7f56bd7dca72 "GStreamer-Video", pretty_function=pretty_function@entry=0x7f56bd7f01b0 <__func__.4.lto_priv.10> "gst_video_frame_map_id", expression=expression@entry=0x7f56bd7df5c4 "info->width <= meta->width") at ../glib/gmessages.c:2930 #3 0x00007f56bd7cf2da in gst_video_frame_map_id (frame=frame@entry=0x7f536c001618, info=0x55e27a0ae830, buffer=buffer@entry=0x7f5398009630, id=id@entry=-1, flags=flags@entry=GST_MAP_READ) at ../gst-libs/gst/video/video-frame.c:92 #4 0x00007f56bd7cf4c1 in gst_video_frame_map (frame=frame@entry=0x7f536c001618, info=<optimized out>, buffer=buffer@entry=0x7f5398009630, flags=flags@entry=GST_MAP_READ) at ../gst-libs/gst/video/video-frame.c:246 #5 0x00007f56bd8abac6 in _raw_upload_frame_new (buffer=0x7f5398009630, raw=0x55e27a16d370) at ../gst-libs/gst/gl/gstglupload.c:2173 #6 _raw_data_upload_accept (impl=0x55e27a16d370, buffer=0x7f5398009630, in_caps=0x7f538c061dc0, out_caps=<optimized out>) at ../gst-libs/gst/gl/gstglupload.c:2292 #7 0x00007f56bd8ac049 in gst_gl_upload_perform_with_buffer (upload=0x55e27a0aea00 [GstGLUpload|glupload4], buffer=buffer@entry=0x7f5398009630, outbuf_ptr=outbuf_ptr@entry=0x7f53867fad10) at ../gst-libs/gst/gl/gstglupload.c:3566 #8 0x00007f562028b27e in gst_gl_upload_element_prepare_output_buffer (bt=0x55e27a16c940 [GstBaseTransform|gluploadelement4], buffer=0x7f5398009630, outbuf=0x7f53867fad10) at ../ext/gl/gstgluploadelement.c:294 #9 0x00007f56be3a561f in default_generate_output (trans=0x55e27a16c940 [GstBaseTransform|gluploadelement4], outbuf=0x7f53867fad10) at ../libs/gst/base/gstbasetransform.c:2173 #10 0x00007f56be3a4d46 in gst_base_transform_chain (pad=pad@entry=0x55e27a16cc50 [GstPad|sink], parent=parent@entry=0x55e27a16c940 [GstObject|gluploadelement4], buffer=buffer@entry=0x7f5398009630) at ../libs/gst/base/gstbasetransform.c:2355 #11 0x00007f56c10cabbc in gst_pad_chain_data_unchecked (pad=pad@entry=0x55e27a16cc50 [GstPad|sink], type=type@entry=4112, data=data@entry=0x7f5398009630) at ../gst/gstpad.c:4494 #12 0x00007f56c10cdfce in gst_pad_push_data (pad=pad@entry=0x55e27a0a84c0 [GstPad|proxypad79], type=type@entry=4112, data=data@entry=0x7f5398009630) at ../gst/gstpad.c:4770 #13 0x00007f56c10ce604 in gst_pad_push (pad=0x55e27a0a84c0 [GstPad|proxypad79], buffer=0x7f5398009630) at ../gst/gstpad.c:4889 #14 0x00007f56c10aef5b in gst_proxy_pad_chain_default (pad=pad@entry=0x55e27a0a8250 [GstPad|sink], parent=parent@entry=0x55e27a0abe60 [GstObject|webkitglvideosink4], buffer=buffer@entry=0x7f5398009630) at ../gst/gstghostpad.c:127 #15 0x00007f56c10cabbc in gst_pad_chain_data_unchecked (pad=pad@entry=0x55e27a0a8250 [GstPad|sink], type=type@entry=4112, data=data@entry=0x7f5398009630) at ../gst/gstpad.c:4494 #16 0x00007f56c10cdfce in gst_pad_push_data (pad=pad@entry=0x7f538c008860 [GstPad|src], type=type@entry=4112, data=data@entry=0x7f5398009630) at ../gst/gstpad.c:4770 #17 0x00007f56c10ce604 in gst_pad_push (pad=0x7f538c008860 [GstPad|src], buffer=0x7f5398009630) at ../gst/gstpad.c:4889 #18 0x00007f56c10aef5b in gst_proxy_pad_chain_default (pad=pad@entry=0x7f538c008c10 [GstPad|proxypad106], parent=parent@entry=0x7f538c008860 [GstObject|src], buffer=buffer@entry=0x7f5398009630) at ../gst/gstghostpad.c:127 #19 0x00007f56c10cabbc in gst_pad_chain_data_unchecked (pad=pad@entry=0x7f538c008c10 [GstPad|proxypad106], type=type@entry=4112, data=data@entry=0x7f5398009630) at ../gst/gstpad.c:4494 #20 0x00007f56c10cdfce in gst_pad_push_data (pad=pad@entry=0x7f538c02fbb0 [GstPad|src], type=type@entry=4112, data=data@entry=0x7f5398009630) at ../gst/gstpad.c:4770 #21 0x00007f56c10ce604 in gst_pad_push (pad=0x7f538c02fbb0 [GstPad|src], buffer=0x7f5398009630) at ../gst/gstpad.c:4889 #22 0x00007f56be3a4ddc in gst_base_transform_chain (pad=pad@entry=0x7f538c02f870 [GstPad|sink], parent=parent@entry=0x7f538c02f490 [GstObject|conv2], buffer=buffer@entry=0x7f5398009630) at ../libs/gst/base/gstbasetransform.c:2391 #23 0x00007f56c10cabbc in gst_pad_chain_data_unchecked (pad=pad@entry=0x7f538c02f870 [GstPad|sink], type=type@entry=4112, data=data@entry=0x7f5398009630) at ../gst/gstpad.c:4494 #24 0x00007f56c10cdfce in gst_pad_push_data (pad=pad@entry=0x7f538c00bad0 [GstPad|src], type=type@entry=4112, data=data@entry=0x7f5398009630) at ../gst/gstpad.c:4770 #25 0x00007f56c10ce604 in gst_pad_push (pad=0x7f538c00bad0 [GstPad|src], buffer=0x7f5398009630) at ../gst/gstpad.c:4889 #26 0x00007f56be3a4ddc in gst_base_transform_chain (pad=pad@entry=0x7f538c00b640 [GstPad|sink], parent=parent@entry=0x7f538c00a130 [GstObject|videobalance], buffer=buffer@entry=0x7f5398009630) at ../libs/gst/base/gstbasetransform.c:2391 #27 0x00007f56c10cabbc in gst_pad_chain_data_unchecked (pad=pad@entry=0x7f538c00b640 [GstPad|sink], type=type@entry=4112, data=data@entry=0x7f5398009630) at ../gst/gstpad.c:4494 #28 0x00007f56c10cdfce in gst_pad_push_data (pad=pad@entry=0x7f538c02efb0 [GstPad|src], type=type@entry=4112, data=data@entry=0x7f5398009630) at ../gst/gstpad.c:4770 #29 0x00007f56c10ce604 in gst_pad_push (pad=0x7f538c02efb0 [GstPad|src], buffer=0x7f5398009630) at ../gst/gstpad.c:4889 #30 0x00007f56be3a4ddc in gst_base_transform_chain (pad=pad@entry=0x7f538c02ed20 [GstPad|sink], parent=parent@entry=0x7f538c02e940 [GstObject|scale], buffer=buffer@entry=0x7f5398009630) at ../libs/gst/base/gstbasetransform.c:2391 #31 0x00007f56c10cabbc in gst_pad_chain_data_unchecked (pad=pad@entry=0x7f538c02ed20 [GstPad|sink], type=type@entry=4112, data=data@entry=0x7f5398009630) at ../gst/gstpad.c:4494 #32 0x00007f56c10cdfce in gst_pad_push_data (pad=pad@entry=0x7f538c02e560 [GstPad|src], type=type@entry=4112, data=data@entry=0x7f5398009630) at ../gst/gstpad.c:4770 #33 0x00007f56c10ce604 in gst_pad_push (pad=0x7f538c02e560 [GstPad|src], buffer=0x7f5398009630) at ../gst/gstpad.c:4889 #34 0x00007f56be3a4ddc in gst_base_transform_chain (pad=pad@entry=0x7f538c02d430 [GstPad|sink], parent=parent@entry=0x7f538c02c3e0 [GstObject|conv], buffer=buffer@entry=0x7f5398009630) at ../libs/gst/base/gstbasetransform.c:2391 #35 0x00007f56c10cabbc in gst_pad_chain_data_unchecked (pad=pad@entry=0x7f538c02d430 [GstPad|sink], type=type@entry=4112, data=data@entry=0x7f5398009630) at ../gst/gstpad.c:4494 #36 0x00007f56c10cdfce in gst_pad_push_data (pad=pad@entry=0x7f538c0082f0 [GstPad|proxypad105], type=type@entry=4112, data=data@entry=0x7f5398009630) at ../gst/gstpad.c:4770 #37 0x00007f56c10ce604 in gst_pad_push (pad=0x7f538c0082f0 [GstPad|proxypad105], buffer=0x7f5398009630) at ../gst/gstpad.c:4889 #38 0x00007f56c10aef5b in gst_proxy_pad_chain_default (pad=pad@entry=0x7f538c007f10 [GstPad|sink], parent=parent@entry=0x7f538c007950 [GstObject|vconv], buffer=buffer@entry=0x7f5398009630) at ../gst/gstghostpad.c:127 #39 0x00007f56c10cabbc in gst_pad_chain_data_unchecked (pad=pad@entry=0x7f538c007f10 [GstPad|sink], type=type@entry=4112, data=data@entry=0x7f5398009630) at ../gst/gstpad.c:4494 #40 0x00007f56c10cdfce in gst_pad_push_data (pad=pad@entry=0x7f538c005850 [GstPad|src], type=type@entry=4112, data=data@entry=0x7f5398009630) at ../gst/gstpad.c:4770 #41 0x00007f56c10ce604 in gst_pad_push (pad=0x7f538c005850 [GstPad|src], buffer=buffer@entry=0x7f5398009630) at ../gst/gstpad.c:4889 #42 0x00007f564ad7c0e9 in gst_queue_push_one (queue=0x7f538c005120 [GstQueue|vqueue]) at ../plugins/elements/gstqueue.c:1436 #43 gst_queue_loop (pad=<optimized out>) at ../plugins/elements/gstqueue.c:1589 #44 0x00007f56c11028b4 in gst_task_func (task=0x7f538c051550 [GstTask|vqueue:src]) at ../gst/gsttask.c:399 #45 0x00007f56c12dd4f2 in g_thread_pool_thread_proxy (data=<optimized out>) at ../glib/gthreadpool.c:350 #46 0x00007f56c12da862 in g_thread_proxy (data=0x7f564c002a90) at ../glib/gthread.c:831 #47 0x00007f56c0aa1e39 in start_thread (arg=<optimized out>) at pthread_create.c:444 #48 0x00007f56c0b298c4 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:100 STDERR: (WPEWebProcess:149399): GStreamer-Video-CRITICAL **: 06:43:05.725: gst_video_frame_map_id: assertion 'info->width <= meta->width' failed STDERR: WPEWebProcess terminated (pid 149399) for reason: crash
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-01-10 08:35:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38846
EWS
Comment 2
2025-01-14 05:17:37 PST
Committed
288840@main
(b9107842430e): <
https://commits.webkit.org/288840@main
> Reviewed commits have been landed. Closing PR #38846 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-01-14 05:18:13 PST
<
rdar://problem/142876984
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug