REGRESSION(288686@main): [GStreamer] Critical warning when running fast/mediastream/mediastreamtrack-video-clone.html https://bugs.webkit.org/show_bug.cgi?id=285745

Reviewed by Xabier Rodriguez-Calvar.

Make sure the GsVideoMeta on converted video frames corresponds to the requested caps.

* Source/WebCore/platform/graphics/gstreamer/GStreamerVideoFrameConverter.cpp:
(WebCore::GStreamerVideoFrameConverter::GStreamerVideoFrameConverter):
(WebCore::GStreamerVideoFrameConverter::convert):

Canonical link: https://commits.webkit.org/288840@main